--- a/templates/predict/home.html
+++ b/templates/predict/home.html
@@ -41,6 +41,7 @@
                     <!-- FORM -->
 					<div class="col-md-7 col-md-offset-1">
 						<div class="booking-form">
+							<h1 id="recommend">INPUT SHOULD BE IN RECOMMMENDED VALUE RANGE</h1>
 							{% csrf_token %}
                             <!-- FORM -->
 							<form action="{% url 'result' %}">
@@ -49,21 +50,21 @@
 									<div class="col-md-4">
 										<div class="form-group">
 											<span class="form-label">Fixed Acidity</span>
-											<input class="form-control" type="number" placeholder="0-1" required name ='fixed acidity'>
+											<input class="form-control" type="number" placeholder="4 - 16" required name ='fixed acidity'>
 										</div>
 									</div>
 
 									<div class="col-md-4">
 										<div class="form-group">
 											<span class="form-label">Volatile acidity</span>
-											<input class="form-control" type="number" placeholder="0-1" required name ='volatile acidity'>
+											<input class="form-control" type="number" placeholder="0 - 1.5" required name ='volatile acidity'>
 										</div>
 									</div>
 
                                     <div class="col-md-4">
 										<div class="form-group">
 											<span class="form-label">Residual sugar</span>
-											<input class="form-control" type="number" placeholder="0-1" required name ='residual sugar'>
+											<input class="form-control" type="number" placeholder="0.9 - 15.5" required name ='residual sugar'>
 										</div>
 									</div>
 								</div>
@@ -72,21 +73,21 @@
 									<div class="col-md-4">
 										<div class="form-group">
 											<span class="form-label">Chlorides</span>
-											<input class="form-control" type="number" placeholder="0-1" required name ='chlorides'>
+											<input class="form-control" type="number" placeholder="0 - 0.6" required name ='chlorides'>
 										</div>
 									</div>
 
                                     <div class="col-md-4">
 										<div class="form-group">
 											<span class="form-label">Free sulfur dioxide</span>
-											<input class="form-control" type="number" placeholder="0-1" required name ='free sulfur dioxide'>
+											<input class="form-control" type="number" placeholder="1 - 72" required name ='free sulfur dioxide'>
 										</div>
 									</div>
 
 									<div class="col-md-4">
 										<div class="form-group">
 											<span class="form-label">Total sulfur dioxide</span>
-											<input class="form-control" type="number" placeholder="0-1" required name ='total sulfur dioxide'>
+											<input class="form-control" type="number" placeholder="6 - 280" required name ='total sulfur dioxide'>
 										</div>
 									</div>
 								</div>
@@ -95,14 +96,14 @@
 									<div class="col-md-4">
 										<div class="form-group">
 											<span class="form-label">Density</span>
-											<input class="form-control" type="number" placeholder="0-1" required name ='density'>
+											<input class="form-control" type="number" placeholder="0.9 - 1" required name ='density'>
 										</div>
 									</div>
 
 									<div class="col-md-4">
 										<div class="form-group">
 											<span class="form-label">pH</span>
-											<input class="form-control" type="number" placeholder="0-1" required name ='pH'>
+											<input class="form-control" type="number" placeholder="2.7 - 4" required name ='pH'>
 										</div>
 									</div>
 
@@ -110,7 +111,7 @@
 									<div class="col-md-4">
 										<div class="form-group">
 											<span class="form-label">Citric acid</span>
-											<input class="form-control" type="number" placeholder="0-1" required name ='citric acid'>
+											<input class="form-control" type="number" placeholder="0 - 1" required name ='citric acid'>
 										</div>
 									</div>
 								</div>
@@ -118,22 +119,20 @@
 									<div class="col-md-4">
 										<div class="form-group">
 											<span class="form-label">Sulphates</span>
-											<input class="form-control" type="number" placeholder="0-1" required name ='sulphates'>
+											<input class="form-control" type="number" placeholder="0.3 - 2" required name ='sulphates'>
 										</div>
 									</div>
 
 									<div class="col-md-4">
 										<div class="form-group">
 											<span class="form-label">Alcohol</span>
-											<input class="form-control" type="number" placeholder="0-1" required name ='alcohol'>
+											<input class="form-control" type="number" placeholder="8.4 - 14" required name ='alcohol'>
 										</div>
 									</div>
 
 								</div>
 								<div class="form-btn">
-									<button class="submit-btn">
-										<input  type="submit" value="PREDICT" style="color: white; background-color: black;"> 
-									</button>
+									<button type="submit" class="submit-btn">PREDICT</button>
 								</div>
 							</form>
 						</div>
