--- a/static/css/home.css
+++ b/static/css/home.css
@@ -34,14 +34,21 @@
 }
 .booking-form {
 	position: relative;
+	text-align: center;
 	background: rgb(255, 255, 255,70%); 
 	max-width: 642px;
 	width: 100%;
 	margin: auto;
-	padding: 45px 25px 25px;
+	padding: 20px 25px 25px;
 	border-radius: 4px;
 	-webkit-box-shadow: 0px 0px 10px -5px rgba(0, 0, 0, 0.4);
 	box-shadow: 0px 0px 10px -5px rgba(0, 0, 0, 0.4);
+}
+
+#recommend{font-size: 18px;
+	font-weight: 600;
+	font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif ;
+	color: black;
 }
 
 .booking-form .form-group {
@@ -67,7 +74,8 @@
 
 /* PLACE HOLDER */
 .booking-form .form-control::placeholder {
-	color: #aaaaaa;
+	color: rgb(205,92,92,85%);
+	font-size: 14px;
 }
 
 
@@ -75,12 +83,13 @@
 .booking-form .form-label {
 	position: absolute;
 	top: 6px;
-	left: 20px;
-	font-weight: 700;
+	left: 14px;
+	font-weight: 600;
+	font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 	text-transform: uppercase;
-	line-height: 24px;
-	height: 24px;
-	font-size: 13px;
+	line-height: 23px;
+	height: 23px;
+	font-size: 12px;
 	color: #000000;
 }
 
@@ -88,13 +97,15 @@
 .booking-form .submit-btn {
 	color: #fff;
 	background-color: #000000;
-	font-weight: 400;
+	font-weight: 900;
 	height: 65px;
-	font-size: 18px;
+	font-size: 19px;
+	font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 	border: none;
 	width: 100%;
 	border-radius: 10px;
-	text-transform: uppercase
+	text-transform: uppercase;
+	cursor:pointer
 }
 
 /* SPACE BETWEEN MODEL NAME AND FORM BOX */
@@ -102,3 +113,9 @@
 	margin-top: 0px;
 }
 
+/* DISABLE NUMBER ARROW */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
