--- a/static/css/home.css
+++ b/static/css/home.css
@@ -1,3 +1,4 @@
+
 .section {
 	position: relative;
 	height: 100vh;
@@ -8,31 +9,23 @@
 	top: 50%;
 	left: 0;
 	right: 0;
-	
 	-webkit-transform: translateY(-50%);
 	transform: translateY(-50%);
 }
 
-#booking {
-	font-family: 'Lato', sans-serif;
-	background: rgb(255, 255, 255,50%);
-	background-size: cover;
-	background-position: center;
-	color: #191a1e;
-}
 /* MODEL NAME */
-.booking-cta h1 {
+.intro h1 {
 	font-size: 55px;
 	text-transform: uppercase;
 	color: white;
 	font-weight:900;
 	font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif}
 /* INTRO */
-.booking-cta p {
+.intro p {
 	font-size: 22px;
 	color: #d6d6d6;
 }
-.booking-form {
+.input-form {
 	position: relative;
 	text-align: center;
 	background: rgb(255, 255, 255,70%); 
@@ -51,12 +44,12 @@
 	color: black;
 }
 
-.booking-form .form-group {
+.input-form .form-group {
 	position: relative;
 	margin-bottom: 20px;
 }
 
-.booking-form .form-control {
+.input-form .form-control {
 	background-color: #fff;
 	height: 65px;
 	padding: 0px 15px;
@@ -73,14 +66,14 @@
 }
 
 /* PLACE HOLDER */
-.booking-form .form-control::placeholder {
+.input-form .form-control::placeholder {
 	color: rgb(205,92,92,85%);
 	font-size: 14px;
 }
 
 
 /* BOX LABEL */
-.booking-form .form-label {
+.input-form .form-label {
 	position: absolute;
 	top: 6px;
 	left: 14px;
@@ -94,7 +87,7 @@
 }
 
 /* SUBMIT BUTTON */
-.booking-form .submit-btn {
+.input-form .submit-btn {
 	color: #fff;
 	background-color: #000000;
 	font-weight: 900;
@@ -109,7 +102,7 @@
 }
 
 /* SPACE BETWEEN MODEL NAME AND FORM BOX */
-.booking-cta {
+.intro {
 	margin-top: 0px;
 }
 
