--- a/templates/predict/result.html
+++ b/templates/predict/result.html
@@ -1,43 +1,114 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    {% load static %}
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <title>Predicting Result</title>
+{% extends "predict/base.html" %}
+{% load static %}
 
-	<!-- Google font -->
-	<link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
+{% block css_source %}
+	<link rel="stylesheet" type='text/css' href="{% static 'css/result.css' %}">
+{% endblock %} 
 
-    <!-- BOOTSTRAP -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+{% block body_block%}
+<div class="section">
+	<div class="section-center">
+		<div class="container">
+			<div class="col-md-12 col-md-offset-1">
+				<div class="input-form">
+					<h1 class='d-flex justify-content-center'>{{answer}}</h1>
+					<h2 class='d-flex justify-content-center'>Here is your input</h2>
+						
+					<div class="row">
+						<div class="col-md-4">
+							<div class="form-group">
+								<span class="form-label">Fixed Acidity</span>
+								<p class ='form-control'> {{fixed_acidity}}</p>
+							</div>
+						</div>
 
-	<!-- Custom stlylesheet -->
-	<link type="text/css" rel="stylesheet" href="{% static 'css/result.css' %}" />
-    <!-- FAVICON -->
-    <link rel="shortcut icon" type="image/png" href="{% static 'image/favicon.ico' %}"/>
-</head>
-<body>
-	<div id="booking" class="section" style="background-image: url(static/image/background.jpg);">
-		<div class="section-center">
-			<div class="container">
-				<div class="row">
-                    <!-- MODEL NAME -->
+						<div class="col-md-4">
+							<div class="form-group">
+								<span class="form-label">Volatile acidity</span>
+								<p class ='form-control'> {{volatile_acidity}}</p>
+							</div>
+						</div>
 
-                    <!-- FORM -->
-					<div class="col-md-12 col-md-offset-1">
-						<div class="booking-form">
-                            <h1 class='d-flex justify-content-center'>{{answer}}</h1>
-						<table>
-                            
-                        </table>
+						<div class="col-md-4">
+							<div class="form-group">
+								<span class="form-label">Citric acid</span>
+								<p class ='form-control'> {{citric_acid}}</p>
+							</div>
 						</div>
 					</div>
+
+					<div class="row">
+						<div class="col-md-4">
+							<div class="form-group">
+								<span class="form-label">Residual sugar</span>
+								<p class ='form-control'> {{residual_sugar}}</p>
+							</div>
+						</div>
+
+						<div class="col-md-4">
+							<div class="form-group">
+								<span class="form-label">Chlorides</span>
+								<p class ='form-control'> {{chlorides}}</p>
+							</div>
+						</div>
+
+						<div class="col-md-4">
+							<div class="form-group">
+								<span class="form-label">Free sulfur dioxide</span>
+								<p class ='form-control'> {{free_sulfur_dioxide}}</p>
+							</div>
+						</div>
+					</div>
+					
+					<div class="row">
+						<div class="col-md-4">
+							<div class="form-group">
+								<span class="form-label">Total sulfur dioxide</span>
+								<p class ='form-control'> {{total_sulfur_dioxide}}</p>
+							</div>
+						</div>
+
+						<div class="col-md-4">
+							<div class="form-group">
+								<span class="form-label">Density</span>
+								<p class ='form-control'> {{density}}</p>
+							</div>
+						</div>
+
+						<div class="col-md-4">
+							<div class="form-group">
+								<span class="form-label">pH</span>
+								<p class ='form-control'> {{pH}}</p>
+							</div>
+						</div>
+					</div>
+
+					<div class="row">
+						<div class="col-md-4">
+							<div class="form-group">
+								<span class="form-label">Sulphates</span>
+								<p class ='form-control'> {{sulphates}}</p>
+							</div>
+						</div>
+
+						<div class="col-md-4">
+							<div class="form-group">
+								<span class="form-label">Alcohol</span>
+								<p class ='form-control'> {{alcohol}}</p>
+							</div>
+						</div>
+					</div>
+
+					<div class='row'>
+                        <div class="col-md-12 form-btn">
+                            <button id='returnbutton'>
+                                <a id='returnlink' style="text-decoration : none" href="{% url 'home' %}"> NEW PREDICT </a>
+                            </button>
+                        </div>
+                    </div>
 				</div>
 			</div>
 		</div>
 	</div>
-</body>
-</html>
+</div>
+{% endblock %}
