--- a/static/css/home.css
+++ b/static/css/home.css
@@ -1,5 +1,17 @@
 
+.section {
+	position: relative;
+	height: 100vh;
+}
 
+.section .section-center {
+	position: absolute;
+	top: 50%;
+	left: 0;
+	right: 0;
+	-webkit-transform: translateY(-50%);
+	transform: translateY(-50%);
+}
 
 /* MODEL NAME */
 .intro h1 {
